add domain models for match status, tie breaks, and sets; refactor player and league identifiers