@@ -3,11 +3,11 @@ package com.github.lbrcic4219rn.dddtennisleague.application.league;
 import com.github.lbrcic4219rn.dddtennisleague.application.league.dto.GroupDto;
 import com.github.lbrcic4219rn.dddtennisleague.application.league.dto.LeagueDto;
 import com.github.lbrcic4219rn.dddtennisleague.domain.league.Group;
-import com.github.lbrcic4219rn.dddtennisleague.domain.league.GroupId;
-import com.github.lbrcic4219rn.dddtennisleague.domain.league.GroupRepo;
+import com.github.lbrcic4219rn.dddtennisleague.domain.league.id.GroupId;
+import com.github.lbrcic4219rn.dddtennisleague.domain.league.repo.GroupRepo;
 import com.github.lbrcic4219rn.dddtennisleague.domain.league.League;
-import com.github.lbrcic4219rn.dddtennisleague.domain.league.LeagueId;
-import com.github.lbrcic4219rn.dddtennisleague.domain.league.LeagueRepo;
+import com.github.lbrcic4219rn.dddtennisleague.domain.league.id.LeagueId;
+import com.github.lbrcic4219rn.dddtennisleague.domain.league.repo.LeagueRepo;
 import com.github.lbrcic4219rn.dddtennisleague.domain.league.Season;
 import com.github.lbrcic4219rn.dddtennisleague.domain.league.SkillLevel;
 import org.springframework.stereotype.Service;
@@ -19,11 +19,11 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
-public class LeagueManagementApplicationService {
+public class LeagueApplicationService {
     private final LeagueRepo leagueRepo;
     private final GroupRepo groupRepo;
 
-    public LeagueManagementApplicationService(LeagueRepo leagueRepo, GroupRepo groupRepo) {
+    public LeagueApplicationService(LeagueRepo leagueRepo, GroupRepo groupRepo) {
         this.leagueRepo = leagueRepo;
         this.groupRepo = groupRepo;
     }
@@ -44,7 +44,7 @@ public class LeagueManagementApplicationService {
         GroupId groupId = new GroupId(UUID.randomUUID());
         Group group = new Group(groupId, leagueId, skillLevel);
         groupRepo.save(group);
-        league.get().addGroup(groupId);
+        league.get().addGroup(group);
         leagueRepo.save(league.get());
 
         return groupId;
@@ -72,7 +72,8 @@ public class LeagueManagementApplicationService {
     }
 
     public GroupDto getGroupById(GroupId groupId) {
-        return getGroupDto(groupId);
+        Optional<Group> group = groupRepo.findById(groupId);
+        return group.map(this::getGroupDto).orElse(null);
     }
 
     public List<LeagueDto> getAllLeagues() {
@@ -83,7 +84,7 @@ public class LeagueManagementApplicationService {
                     List<GroupDto> groupDtos = league.getGroups()
                             .stream()
                             .map(this::getGroupDto)
-                            .collect(Collectors.toList());
+                            .toList();
                     return new LeagueDto(
                             league.getLeagueId().value().toString(),
                             league.getName(),
@@ -103,15 +104,13 @@ public class LeagueManagementApplicationService {
         groupRepo.remove(groupId);
     }
 
-    private GroupDto getGroupDto(GroupId groupId) {
-        Optional<Group> group = groupRepo.findById(groupId);
-        return group.map(value -> new GroupDto(
-                value.getId().value().toString(),
-                value.getLeagueId().value().toString(),
-                value.getLevel().toString(),
-                value.getMemberships().size()
-        )).orElse(null);
-
+    private GroupDto getGroupDto(Group group) {
+        return new GroupDto(
+                group.getId().value().toString(),
+                group.getLeagueId().value().toString(),
+                group.getLevel().toString(),
+                group.getMemberships().size()
+        );
     }
 }
 
